# mcp-brag

./: .flake8  .gitignore  LICENSE  README.md  copy-python-interprater.sh  embedder_config.yaml  makefile  pyproject.toml  pyproject.toml.poetry-backup
common/: device.py  env.py  log.py  singleton.py
common/config/: constant.py  env.py  field.py
docs/: openapi.yaml
embedder/: constants.py  embed.py  main.py  text.py
embedder/read_write/: __init__.py  bulk_queue.py
embedder/store/: __init__.py  store.py
embedder/vectorizer/: __init__.py  interface.py  mock.py  sentence.py
scripts/: embedding_run.py
server/: constants.py  error.py  main.py  shared.py
server/api/: config.py  internal.py  mcp.py  middleware.py  response.py  routes.py  search.py  tools.py
server/read/: __init__.py  docx_reader.py  html_reader.py  pdf_reader.py  pptx_reader.py  reader.py  reader_factory.py  text_reader.py
server/thread_managers/: download_manager.py  embedder_manager.py  interface.py  transcription_manager.py
server/workers/: download.py  embedding.py  ingestion_state_manager.py
tests/: conftest.py
tests/config/: test_constant.py  test_env.py  test_field.py
tests/embedder/: test_embedder.py  test_text.py
tests/read_write/: test_bulk_queue.py
tests/server/: test_docx_reader.py  (+5 more)
transcriber/: __init__.py  interface.py  parakeet.py  whisper.py
ui/: .eslintrc.cjs  .gitignore  .prettierignore  README-ELECTRON.md  Readme.md  electron.vite.config.ts  forge.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+55 files in other folders)
